changes in code

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
+    <meta name="description" content="NestMart Shop is a modern and responsive frontend application built to manage products, customers, and sales for a local retail store. Designed to work seamlessly with the NestJS backend, it supports features like role-based dashboards, product listings, sales management, and customer tracking.">
     <link rel="icon" type="image/jpeg" href="/favicon.jpg" class="round-img" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nest-Mart-Shop</title>
